grid spacing fixed

--- a/src/components/Menu/FarmersLog/farmers-log-styles.css
+++ b/src/components/Menu/FarmersLog/farmers-log-styles.css
@@ -98,10 +98,12 @@
   
   .tiles {
 	display: grid;
+  justify-items: center;
 	grid-template-columns: auto auto auto;
 	grid-gap: 10px;
 	padding: 10px;
 	grid-template-columns: 1fr 2fr;
+  margin-bottom: 25px;
   }
   
   img {
